version/0.10/_sources/examples/05-Legacy/04-harmonic-analysis.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/05-Legacy/04-harmonic-analysis.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_05-Legacy_04-harmonic-analysis.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_05-Legacy_04-harmonic-analysis.py:


.. _ref_harmonic_analysis:

Postprocess the result file for a harmonic analysis
===================================================
This example shows how to use the legacy PyDPF-Post API to postprocess a result
file for a harmonic analysis.

.. GENERATED FROM PYTHON SOURCE LINES 33-37

Perform required imports
------------------------
Perform required imports. This example uses a supplied file that you can
get by importing the DPF ``examples`` package.

.. GENERATED FROM PYTHON SOURCE LINES 37-41

.. code-block:: Python


    from ansys.dpf import post
    from ansys.dpf.post import examples








.. GENERATED FROM PYTHON SOURCE LINES 42-46

Get ``Solution`` object
-----------------------
Get the ``Solution`` object. This example loads a result file for an harmonic
analysis computed in Ansys Mechanical.

.. GENERATED FROM PYTHON SOURCE LINES 46-52

.. code-block:: Python


    example_path = examples.download_all_kinds_of_complexity()

    solution = post.load_solution(examples.complex_rst)
    print(solution)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Harmonic Analysis Solution object.


    Data Sources
    ------------------------------
    DPF  DataSources: 
      Result files:
         result key: rst and path: /opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/ansys/dpf/core/examples/result_files/complex.rst 
      Secondary files:


    DPF Model
    ------------------------------
    Harmonic analysis
    Unit system: MKS: m, kg, N, s, V, A, degC
    Physics Type: Mechanical
    Available results:
         -  displacement: Nodal Displacement
         -  electric_potential: Nodal Electric Potential
         -  reaction_force: Nodal Force   
         -  stress: ElementalNodal Stress 
         -  elemental_volume: Elemental Volume
         -  stiffness_matrix_energy: Elemental Energy-stiffness matrix
         -  artificial_hourglass_energy: Elemental Hourglass Energy
         -  kinetic_energy: Elemental Kinetic Energy
         -  co_energy: Elemental co-energy
         -  incremental_energy: Elemental incremental energy
         -  thermal_dissipation_energy: Elemental thermal dissipation energy
         -  electric_field: ElementalNodal Electric field
         -  elastic_strain: ElementalNodal Strain
         -  elastic_strain_eqv: ElementalNodal Strain eqv
         -  electric_flux_density: ElementalNodal Electric flux density
         -  current_density: Elemental Current Density
         -  nmisc: Elemental Elemental Non Summable Miscellaneous Data
         -  elemental_heat_generation: Elemental Elemental Heat Generation
         -  structural_temperature: ElementalNodal Structural temperature
    ------------------------------
    DPF  Meshed Region: 
      4802 nodes 
      657 elements 
      Unit: m 
      With solid (3D) elements
    ------------------------------
    DPF  Time/Freq Support: 
      Number of sets: 1 
      With complex values 

    Cumulative     Frequency (Hz) LoadStep       Substep        RPM             
    1              343478.200000  1              1              0.000000        

    This may contain complex results.




.. GENERATED FROM PYTHON SOURCE LINES 53-55

Get ``Result`` objects
----------------------

.. GENERATED FROM PYTHON SOURCE LINES 57-61

Get displacement result
~~~~~~~~~~~~~~~~~~~~~~~
The displacement result contains a field for real values and a field for
imaginary values.

.. GENERATED FROM PYTHON SOURCE LINES 61-65

.. code-block:: Python


    disp_result = solution.displacement()
    disp = disp_result.vector








.. GENERATED FROM PYTHON SOURCE LINES 66-68

Get number of fields
~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: Python


    disp.num_fields





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    2



.. GENERATED FROM PYTHON SOURCE LINES 72-74

Get data from field
~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 74-76

.. code-block:: Python

    disp.get_data_at_field(0)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([[ 2.65783929e-09, -5.98949034e-10,  8.34267891e-11],
              [ 2.63846617e-09, -3.00204960e-10,  8.27306877e-11],
              [ 2.50179982e-09, -2.86371281e-10,  6.29386453e-11],
              ...,
              [-1.70840238e-09, -2.73504676e-09,  3.48706947e-11],
              [-1.57038405e-09, -2.71125223e-09,  6.79105278e-11],
              [-1.57311157e-09, -2.71904943e-09,  0.00000000e+00]],
             shape=(4802, 3))



.. GENERATED FROM PYTHON SOURCE LINES 77-79

Get maximum data value over all fields
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 79-82

.. code-block:: Python


    disp.max_data





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([[2.76941713e-09, 2.76940199e-09, 4.10914311e-10],
              [6.53706736e-13, 6.53416337e-13, 9.25220948e-14]])



.. GENERATED FROM PYTHON SOURCE LINES 83-85

Get minimum data value over all fields
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 85-88

.. code-block:: Python


    disp.min_data





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([[-2.76946046e-09, -2.76952549e-09,  0.00000000e+00],
              [-6.53727285e-13, -6.53452004e-13, -1.66091913e-13]])



.. GENERATED FROM PYTHON SOURCE LINES 89-91

Get maximum data value over targeted field
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 91-94

.. code-block:: Python


    disp.get_max_data_at_field(0)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([2.76941713e-09, 2.76940199e-09, 4.10914311e-10])



.. GENERATED FROM PYTHON SOURCE LINES 95-97

Get minimum data value over all fields
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 97-100

.. code-block:: Python


    disp.get_min_data_at_field(0)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DPFArray([-2.76946046e-09, -2.76952549e-09,  0.00000000e+00])



.. GENERATED FROM PYTHON SOURCE LINES 101-105

Get stress result
~~~~~~~~~~~~~~~~~
Get a stress result that deals with amplitude. It contains a field for real
values and a field for imaginary values.

.. GENERATED FROM PYTHON SOURCE LINES 105-108

.. code-block:: Python


    stress_result = solution.stress()








.. GENERATED FROM PYTHON SOURCE LINES 109-111

Check if support has complex frequencies
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 111-114

.. code-block:: Python


    stress_result.has_complex_frequencies()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 115-117

Get tensor result
~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 117-120

.. code-block:: Python


    stress = stress_result.tensor








.. GENERATED FROM PYTHON SOURCE LINES 121-127

Get number of fields
~~~~~~~~~~~~~~~~~~~~~~
Get the number of shell and solid elements in distinct fields. Because shell and
solid elements are in distinct fields, you get four fields: the
solid-real one, the solid-imaginary one, the shell-real one, and the
shell-imaginary one.

.. GENERATED FROM PYTHON SOURCE LINES 127-130

.. code-block:: Python


    stress.num_fields





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    2



.. GENERATED FROM PYTHON SOURCE LINES 131-133

Get shell field
~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 133-137

.. code-block:: Python


    shell_field = stress[0]
    shell_field.shell_layers





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <shell_layers.nonelayer: 5>



.. GENERATED FROM PYTHON SOURCE LINES 138-140

Get solid field
~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 140-143

.. code-block:: Python


    solid_field = stress[1]








.. GENERATED FROM PYTHON SOURCE LINES 144-146

Plot amplitude contour
~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 146-150

.. code-block:: Python


    amplitude = stress_result.tensor_amplitude
    amplitude.plot_contour()




.. image-sg:: /examples/05-Legacy/images/sphx_glr_04-harmonic-analysis_001.png
   :alt: 04 harmonic analysis
   :srcset: /examples/05-Legacy/images/sphx_glr_04-harmonic-analysis_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 151-155

Get elastic strain result
=========================
Get an elastic strain result that deals with phase. It contains a field for
real values and a field for imaginary values.

.. GENERATED FROM PYTHON SOURCE LINES 155-161

.. code-block:: Python


    elastic_strain_result = solution.elastic_strain()
    elastic_strain = elastic_strain_result.tensor
    # shell and solid elements are in distinct fields.
    elastic_strain.num_fields





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    2



.. GENERATED FROM PYTHON SOURCE LINES 162-165

Define phase
~~~~~~~~~~~~
The phase must be a float value. The unit is degrees.

.. GENERATED FROM PYTHON SOURCE LINES 165-172

.. code-block:: Python


    es_at_phase = elastic_strain_result.tensor_at_phase(39.0)
    es_at_phase.max_data
    es_at_phase.num_fields
    real_field = elastic_strain_result.tensor_at_phase(0.0)
    img_field = elastic_strain_result.tensor_at_phase(90.0)








.. GENERATED FROM PYTHON SOURCE LINES 173-175

If the result file contains results, use this method
to get the elastic strain result.

.. GENERATED FROM PYTHON SOURCE LINES 175-177

.. code-block:: Python


    print(solution.elastic_strain())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Complex tensor object.

    Tensor object.

    Object properties:
     - location   : Nodal

    Complex elastic strain object.





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.248 seconds)


.. _sphx_glr_download_examples_05-Legacy_04-harmonic-analysis.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 04-harmonic-analysis.ipynb <04-harmonic-analysis.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 04-harmonic-analysis.py <04-harmonic-analysis.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 04-harmonic-analysis.zip <04-harmonic-analysis.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
